<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context="com.trungvu.chatapp.Activity.LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"></include>

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_2"
        android:ems="10"
        android:hint="@string/edt_login_email"
        android:inputType="textMultiLine|textEmailAddress"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edt_login_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/custom_button_2"
        android:ems="10"
        android:hint="@string/edt_login_password"
        android:inputType="textMultiLine|textPassword"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="357dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_button"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>
