<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context="com.trungvu.chatapp.Activity.StartPageActivity">

    <Button
        android:id="@+id/already_have_account_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_above="@+id/need_account_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:text="@string/already_have_account_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:id="@+id/need_account_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/custom_button_2"
        android:padding="10dp"
        android:text="@string/need_account_button"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="152dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>
