<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".Activity.InfoActivity">

    <include
        android:id="@+id/toolbar_InfoActivity"
        layout="@layout/app_bar_layout"></include>

    <EditText
        android:id="@+id/editText_userName_InfoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_2"
        android:hint="@string/edt_name_register"
        android:padding="20sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_InfoActivity" />

    <EditText
        android:id="@+id/editText_Phone_InfoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_2"
        android:hint="@string/edt_phone_InfoActivity"
        android:padding="20sp"
        android:inputType="phone"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_userName_InfoActivity" />

    <Spinner
        android:id="@+id/spinner_Sex_InfoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32sp"
        android:background="@drawable/custom_button_2"
        android:padding="20sp"
        android:spinnerMode="dialog"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Phone_InfoActivity" />

    <EditText
        android:id="@+id/editText_Birthday_InfoActivity"
        android:hint="@string/edt_birthday_InfoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_2"
        android:inputType="date"
        android:ems="10"
        android:padding="20sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Sex_InfoActivity" />

    <Button
        android:id="@+id/btn_Save_InfoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_save_changes"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Birthday_InfoActivity" />


</android.support.constraint.ConstraintLayout>