<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".Activity.ForgotPasswordActivity">

    <include
        android:id="@+id/toolbar_ForgotPasswordActivity"
        layout="@layout/app_bar_layout"></include>

    <EditText
        android:id="@+id/editText_ResetPassword_ForgotPasswordActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button_2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:hint="@string/edt_email_register"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ForgotPasswordActivity" />

    <TextView
        android:id="@+id/textView_InfoReset_ForgotPasswordActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/textView_InfoReset_ForgotPasswordActivity"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_ResetPassword_ForgotPasswordActivity" />

    <Button
        android:id="@+id/Button_ResetPassword_ForgotPasswordActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/Button_ResetPassword_ForgotPasswordActivity"
        android:textColor="#ffff"
        android:padding="20sp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_InfoReset_ForgotPasswordActivity" />

</android.support.constraint.ConstraintLayout>